--- a/environment.yml
+++ b/environment.yml
@@ -1,20 +1,188 @@
-# conda env create --file environment.yml
 name: _xgb
 channels:
   - anaconda
   - conda-forge
   - defaults
 dependencies:
-  - fs
-  - jupyter
-  - jupyterlab
-  - pathlib
-  - matplotlib
-  - numpy
-  - pandas
-  - pip
-  - pyprojroot
-  - python=3.8
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=1_gnu
+  - _py-xgboost-mutex=2.0=cpu_0
+  - appdirs=1.4.4=py_0
+  - argon2-cffi=20.1.0=py38h7b6447c_1
+  - async_generator=1.10=py_0
+  - atk-1.0=2.36.0=h3371d22_4
+  - attrs=20.2.0=py_0
+  - backcall=0.2.0=py_0
+  - blas=1.0=mkl
+  - bleach=3.2.1=py_0
+  - brotlipy=0.7.0=py38h7b6447c_1000
+  - ca-certificates=2021.10.8=ha878542_0
+  - cairo=1.16.0=hf32fb01_1
+  - certifi=2021.10.8=py38h578d9bd_1
+  - cffi=1.15.0=py38h3931269_0
+  - chardet=3.0.4=py38_1003
+  - cryptography=3.1.1=py38h1ba5d50_0
+  - cycler=0.10.0=py38_0
+  - dbus=1.13.18=hb2f20db_0
+  - decorator=4.4.2=py_0
+  - defusedxml=0.6.0=py_0
+  - entrypoints=0.3=py38_0
+  - expat=2.4.5=h27087fc_0
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=hab24e00_0
+  - fontconfig=2.13.1=h6c09931_0
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=0
+  - freetype=2.10.4=h5ab3b9f_0
+  - fribidi=1.0.10=h36c2ea0_0
+  - fs=2.4.11=py38h578d9bd_3
+  - g-ir-build-tools=1.70.0=py38h69e1f0e_1
+  - g-ir-host-tools=1.70.0=h601b988_1
+  - gdk-pixbuf=2.42.6=h8cc273a_5
+  - gettext=0.19.8.1=h73d1719_1008
+  - glib=2.70.2=h780b84a_4
+  - glib-tools=2.70.2=h780b84a_4
+  - gobject-introspection=1.70.0=py38h382169c_1
+  - graphite2=1.3.14=h23475e2_0
+  - graphviz=2.50.0=h85b4f2f_1
+  - gst-plugins-base=1.14.0=h8213a91_2
+  - gstreamer=1.14.0=h28cd5cc_2
+  - gtk2=2.24.33=h539f30e_1
+  - gts=0.7.6=h64030ff_2
+  - harfbuzz=3.1.2=h6b1f951_0
+  - icu=58.2=he6710b0_3
+  - idna=2.10=py_0
+  - importlib-metadata=2.0.0=py_1
+  - importlib_metadata=2.0.0=1
+  - intel-openmp=2020.2=254
+  - ipykernel=5.3.4=py38h5ca1d4c_0
+  - ipython=7.18.1=py38h5ca1d4c_0
+  - ipython_genutils=0.2.0=py38_0
+  - ipywidgets=7.5.1=py_1
+  - jedi=0.17.2=py38_0
+  - jinja2=2.11.2=py_0
+  - joblib=1.1.0=pyhd8ed1ab_0
+  - jpeg=9e=h7f98852_0
+  - json5=0.9.5=py_0
+  - jsonschema=3.2.0=py_2
+  - jupyter=1.0.0=py38_7
+  - jupyter_client=6.1.7=py_0
+  - jupyter_console=6.2.0=py_0
+  - jupyter_core=4.6.3=py38_0
+  - jupyterlab=2.2.6=py_0
+  - jupyterlab_pygments=0.1.2=py_0
+  - jupyterlab_server=1.2.0=py_0
+  - kiwisolver=1.2.0=py38hfd86e86_0
+  - lcms2=2.11=h396b838_0
+  - ld_impl_linux-64=2.36.1=hea4e1c9_2
+  - libblas=3.9.0=1_h6e990d7_netlib
+  - libcblas=3.9.0=3_h893e4fe_netlib
+  - libedit=3.1.20191231=h14c3975_1
+  - libffi=3.4.2=h7f98852_5
+  - libgcc-ng=11.2.0=h1d223b6_12
+  - libgd=2.3.3=h695aa2c_0
+  - libgfortran-ng=7.5.0=h14aa051_20
+  - libgfortran4=7.5.0=h14aa051_20
+  - libgirepository=1.70.0=hb520f89_1
+  - libglib=2.70.2=h174f98d_4
+  - libgomp=11.2.0=h1d223b6_12
+  - libiconv=1.16=h516909a_0
+  - liblapack=3.9.0=3_h893e4fe_netlib
+  - libnsl=2.0.0=h7f98852_0
+  - libpng=1.6.37=hbc83047_0
+  - librsvg=2.52.5=hc3c00ef_1
+  - libsodium=1.0.18=h7b6447c_0
+  - libstdcxx-ng=11.2.0=he4da1e4_12
+  - libtiff=4.1.0=h2733197_1
+  - libtool=2.4.6=h9c3ff4c_1008
+  - libuuid=1.0.3=h1bed415_2
+  - libwebp-base=1.2.2=h7f98852_1
+  - libxcb=1.14=h7b6447c_0
+  - libxgboost=1.5.0=h295c915_1
+  - libxml2=2.9.12=h03d6c58_0
+  - libzlib=1.2.11=h36c2ea0_1013
+  - lz4-c=1.9.2=heb0550a_3
+  - markupsafe=1.1.1=py38h7b6447c_0
+  - matplotlib=3.3.1=0
+  - matplotlib-base=3.3.1=py38h817c723_0
+  - mistune=0.8.4=py38h7b6447c_1000
+  - mkl=2019.4=243
+  - mkl-service=2.3.0=py38he904b0f_0
+  - mkl_fft=1.2.0=py38h23d657b_0
+  - mkl_random=1.1.0=py38h962f231_0
+  - nbclient=0.5.1=py_0
+  - nbconvert=6.0.7=py38_0
+  - nbformat=5.0.8=py_0
+  - ncurses=6.2=he6710b0_1
+  - nest-asyncio=1.4.1=py_0
+  - notebook=6.1.4=py38_0
+  - numpy=1.19.1=py38hbc911f0_0
+  - numpy-base=1.19.1=py38hfa32c7d_0
+  - olefile=0.46=py_0
+  - openssl=1.1.1l=h7f98852_0
+  - packaging=20.4=py_0
+  - pandas=1.1.3=py38he6710b0_0
+  - pandoc=2.11=hb0f4dca_0
+  - pandocfilters=1.4.2=py38_1
+  - pango=1.48.10=h54213e6_2
+  - parso=0.7.0=py_0
+  - pathlib=1.0.1=py_1
+  - pcre=8.45=h9c3ff4c_0
+  - pexpect=4.8.0=py38_0
+  - pickleshare=0.7.5=py38_1000
+  - pillow=8.0.0=py38h9a89aac_0
+  - pip=20.2.4=py38_0
+  - pixman=0.40.0=h36c2ea0_0
+  - pkg-config=0.29.2=h36c2ea0_1008
+  - prometheus_client=0.8.0=py_0
+  - prompt-toolkit=3.0.8=py_0
+  - prompt_toolkit=3.0.8=0
+  - ptyprocess=0.6.0=py38_0
+  - py-xgboost=1.5.0=py38h06a4308_1
+  - pycparser=2.20=py_2
+  - pygments=2.7.1=py_0
+  - pyopenssl=19.1.0=py_1
+  - pyparsing=2.4.7=py_0
+  - pyprojroot=0.2.0=py_0
+  - pyqt=5.9.2=py38h05f1152_4
+  - pyrsistent=0.17.3=py38h7b6447c_0
+  - pysocks=1.7.1=py38_0
+  - python=3.8.12=hb7a2778_2_cpython
+  - python-dateutil=2.8.1=py_0
+  - python_abi=3.8=2_cp38
+  - pytz=2020.1=py_0
+  - pyzmq=19.0.2=py38he6710b0_1
+  - qt=5.9.7=h5867ecd_1
+  - qtconsole=4.7.7=py_0
+  - qtpy=1.9.0=py_0
+  - readline=8.1=h46c0cb4_0
+  - requests=2.24.0=py_0
+  - scikit-learn=0.23.2=py38h5d63f67_3
+  - scipy=1.5.3=py38h828c644_0
+  - send2trash=1.5.0=py38_0
+  - setuptools=50.3.0=py38hb0f4dca_1
+  - sip=4.19.24=py38he6710b0_0
+  - six=1.15.0=py_0
+  - sqlite=3.37.0=h9cd32fc_0
+  - terminado=0.9.1=py38_0
+  - testpath=0.4.4=py_0
+  - threadpoolctl=3.1.0=pyh8a188c0_0
+  - tk=8.6.12=h27826a3_0
+  - tornado=6.0.4=py38h7b6447c_1
+  - traitlets=5.0.5=py_0
+  - urllib3=1.25.11=py_0
+  - wcwidth=0.2.5=py_0
+  - webencodings=0.5.1=py38_1
+  - wheel=0.35.1=py_0
+  - widgetsnbextension=3.5.1=py38_0
+  - xgboost=1.5.0=py38h06a4308_1
+  - xz=5.2.5=h7b6447c_0
+  - zeromq=4.3.3=he6710b0_3
+  - zipp=3.3.1=py_0
+  - zlib=1.2.11=h36c2ea0_1013
+  - zstd=1.4.4=h0b5b093_3
   - pip:
-    - pyhere
-    
+    - pyhere==1.0.0
+prefix: /home/andres/anaconda3/envs/_xgb
